@@ -51,8 +51,7 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerDTO> getAllCustomers() {
         return customerRepository.findAll()
                 .stream()
-                .map(customerMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(customerMapper::toDTO).toList();
     }
 
 
@@ -103,7 +102,6 @@ public class CustomerServiceImpl implements CustomerService {
         }
         return customerRepository.searchByTerm(term)
                 .stream()
-                .map(customerMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(customerMapper::toDTO).toList();
     }
 }
